@@ -21,16 +21,32 @@ foo64b ()
 }
 /* { dg-final { scan-assembler-times "lrvg\t%r2,0\\(%r\[0-9\]*\\)" 1 { target lp64 } } } */
 
+void
+foo64c (uint64_t a)
+{
+  u64 = __builtin_bswap64 (a);
+}
+/* { dg-final { scan-assembler-times "strvg\t%r2,0\\(%r\[0-9\]*\\)" 1 { target lp64 } } } */
+
+
+
 uint32_t
-foo32 ()
+foo32a (uint32_t a)
+{
+  return __builtin_bswap32 (a);
+}
+/* { dg-final { scan-assembler-times "lrvr\t%r2,%r2" 1 } } */
+
+uint32_t
+foo32b ()
 {
   return __builtin_bswap32 (u32);
 }
 /* { dg-final { scan-assembler-times "lrv\t%r2,0\\(%r\[0-9\]*\\)" 1 } } */
 
-uint16_t
-foo16 ()
+void
+foo32c (uint32_t a)
 {
-  return __builtin_bswap16 (u16);
+  u32 = __builtin_bswap32 (a);
 }
-/* { dg-final { scan-assembler-times "lrvh\t%r2,0\\(%r\[0-9\]*\\)" 1 } } */
+/* { dg-final { scan-assembler-times "strv\t%r2,0\\(%r\[0-9\]*\\)" 1 } } */
